Added indicator if it's loading. The UI is still freezing because of the population of table data, but nothing could be done because setting of data should be executed in the application thread